# PulseStream

./: .gitignore  ARCHITECTURE.md  Makefile  README.md
backend/: .env.example  benchmark_results.json  bottleneck_benchmark.py  bottleneck_results_50000p_mac.json  bottleneck_results_50000p_t4.json  bottleneck_results_5000p_mac.json  bottleneck_results_5000p_t4.json  main.py  pyproject.toml  requirements.txt  setup_cython.py
backend/api/: __init__.py
backend/api/routes/: alerts.py  benchmark.py  patients.py
backend/db/: __init__.py  schema.sql  supabase_client.py
backend/pipeline/: __init__.py  benchmark.py  buffer.py  caching_utils.py  cython_detect.pyx  detector.py  gpu_detect.py  itertools_utils.py  jax_anomaly.py  mpi_detect.py  multiprocess_detect.py  numba_cuda_detect.py  optimizer.py  profiler.py  resource_optimizer.py  scipy_optimize.py  simulator.py  spark_analysis.py  symbolic_analysis.py
backend/tests/: test_benchmark.py  test_gpu_detect.py  test_itertools_utils.py  test_multiprocess.py  test_patients_route.py  test_simulator.py
frontend/: .env.local.example  components.json  eslint.config.mjs  middleware.ts  next.config.js  package-lock.json  package.json  proxy.ts  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(authenticated)/: layout.tsx
frontend/components/: AlertBanner.tsx  AlertTable.tsx  PatientList.tsx  VitalsChart.tsx
frontend/components/ui/: accordion.tsx  alert.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  progress.tsx  select.tsx  skeleton.tsx  (+5 more)
frontend/lib/: api.ts  supabase.ts
(+3 files in other folders)
