[project]
name = "pulsestream-backend"
version = "0.1.0"
description = "PulseStream ICU Anomaly Detection Pipeline"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "supabase==2.8.0",
    "numpy==1.26.4",
    "numba==0.60.0",
    "scipy==1.14.1",
    "scikit-learn==1.5.1",
    "pandas==2.2.2",
    "python-dotenv==1.0.1",
    "memory-profiler==0.61.0",
    "line-profiler==4.1.3",
    "pydantic==2.8.2",
    "pytest==8.3.3",
]

[tool.uv]
dev-dependencies = []
